# json_schema_to_code

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pre-commit.yml  pyproject.toml  setup.py
json_schema_to_code/: __init__.py  cli_utils.py  codegen.py  json_schema_to_code.py  utils.py  validation_rules.py  validation_rules_cs.json  validation_rules_python.json  validator.py
json_schema_to_code/pipeline/: README.md  __init__.py  config.py  generator.py
json_schema_to_code/pipeline/analyzer/: __init__.py  analyzer.py  ir_nodes.py  reference_resolver.py
json_schema_to_code/pipeline/ast_backends/: __init__.py  base.py  csharp_ast_backend.py  csharp_ast_nodes.py  csharp_serializer.py  python_ast_backend.py
json_schema_to_code/pipeline/backends/: __init__.py  base.py  csharp_backend.py  python_backend.py
json_schema_to_code/pipeline/formatters/: __init__.py
json_schema_to_code/pipeline/merger/: atomic_writer.py  base.py  csharp_merger.py  python_merger.py
json_schema_to_code/pipeline/schema_ast/: __init__.py  nodes.py  parser.py
json_schema_to_code/pipeline_v3/: __init__.py  config.py  generator.py
json_schema_to_code/pipeline_v3/analyzer/: __init__.py  analyzer.py  ir_nodes.py  name_resolver.py  reference_resolver.py
json_schema_to_code/pipeline_v3/ast_backends/: python_ast_backend.py
json_schema_to_code/pipeline_v3/formatters/: __init__.py  base.py  black_formatter.py  ruff_formatter.py
json_schema_to_code/pipeline_v3/merger/: __init__.py  atomic_writer.py  csharp_merger.py  python_merger.py
json_schema_to_code/pipeline_v3/schema_ast/: nodes.py
json_schema_to_code/templates/: class.cs.jinja2
json_schema_to_code/templates/cs/: class.cs.jinja2  prefix.cs.jinja2
json_schema_to_code/templates/python/: class.py.jinja2  prefix.py.jinja2
json_schema_to_code/tests/: .gitignore  README.md  test_base.py  test_cli_utils.py  test_code_merge_roundtrip.py  test_comment_handling.py  test_csharp_ast_roundtrip.py  test_default_values.py  test_exclude_metadata.py  test_external_base_class_imports.py  test_functional.py  test_generation_comment.py  test_import_grouping.py  test_inline_class_generation.py  test_merge.py  test_pipeline_integration.py  test_quoted_types.py  test_reference_files.py  test_template_simplification.py  test_ui_hierarchy.py  test_union_types.py  test_validation_rules.py
json_schema_to_code/tests/test_data/: comment_handling_tests.json  default_values_tests.json  generation_comment_tests.json  quoted_types_tests.json  ui_hierarchy_tests.json  union_types_tests.json
json_schema_to_cs/: codegen.py  json_schema_to_cs.py
json_schema_to_cs/templates/: class.cs.jinja2
json_schema_to_cs/tests/: test_base.py  test_fun.py
(+171 files in other folders)
